Actualización del código